--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <m2e.apt.activation>disabled</m2e.apt.activation>
     </properties>
 
     <dependencies>
