--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,3 +21,6 @@ spring:
         enable_lazy_load_no_trans: true # 형식화된 sql 문을 보여준다. Beautifier 기능이라고 생각하면 된다
         format_sql: true #Lazy Load 를 적용하기 위한 설정
 
+logging:
+  level:
+    root: info
