--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     password: 1234
 
   jpa:
-    open-in-view: false
+    open-in-view: false # 영속성 컨텍스트를 View까지 유지할지 여부
     hibernate:
       ddl-auto: update
       naming:
